[package]
name = "around"
version = "0.0.0"
edition = "2021"
authors = ["vcup"]
repository = "https://github.com/vcup/around"
keywords = [ "around", "ard" ]
categories = []
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = 3

[dependencies]
